2002-03-03  Bruno Haible  <bruno@clisp.org>

	* message.h (format_type): New enum value 'format_tcl'.
	(NFORMATS): Increment.
	* message.c (format_language): Add format_tcl entry.
	(format_language_pretty): Likewise.
	* format.h (formatstring_tcl): New declaration.
	* format-tcl.c: New file.
	* format.c (formatstring_parsers): Add formatstring_tcl.
	* x-tcl.h: New file.
	* x-tcl.c: New file.
	* xgettext.c: Include x-tcl.h.
	(main): Call x_tcl_extract_all, x_tcl_keyword.
	(language_to_scanner): Add Tcl rule.
	(extension_to_language): Add Tcl rule.
	* write-tcl.h: New file.
	* write-tcl.c: New file.
	* msgfmt.c: Include write-tcl.h.
	(tcl_mode, tcl_locale_name, tcl_base_directory): New variables.
	(long_options): Add option "--tcl".
	(main): Handle --tcl option. Set tcl_mode, tcl_locale_name,
	tcl_base_directory. More checks for contradicting options. Call
	msgdomain_write_tcl.
	(usage): Mention Tcl mode.
	(format_directive_domain): Ignore domain directive if in Tcl mode.
	* read-tcl.h: New file.
	* read-tcl.c: New file.
	* msgunfmt.c: Include read-tcl.h.
	(tcl_mode, tcl_locale_name, tcl_base_directory): New variables.
	(long_options): Add option "--tcl".
	(main): Handle --tcl and -d options. Set tcl_mode, tcl_locale_name,
	tcl_base_directory. More checks for contradicting options. Call
	msgdomain_read_tcl.
	(usage): Mention Tcl mode.
	* Makefile.am (noinst_HEADERS): Add read-tcl.h, write-tcl.h, x-tcl.h.
	(DEFS): Add -DGETTEXTDATADIR.
	(FORMAT_SOURCE): Add format-tcl.c.
	(msgfmt_SOURCES): Add write-tcl.c.
	(msgunfmt_SOURCES): Add read-tcl.c.
	(xgettext_SOURCES): Add x-tcl.c.
	(install-tcl, installdirs-tcl, uninstall-tcl): New targets.

2002-03-02  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (check_pair): Don't count "&&" as an accelerator designator,
	for consistency with Qt and KDE.

2002-02-24  Bruno Haible  <bruno@clisp.org>

	* po-lex.c: Include libstdarg.h.
	(VA_START, va_alist, va_dcl): Remove macros.